--- a/package.json
+++ b/package.json
@@ -24,6 +24,13 @@
   "author": "gkal19",
   "license": "ISC",
   "dependencies": {
+    "babel-eslint": "7.2.3",
+    "babel-istanbul": "0.12.2",
+    "babel-plugin-add-module-exports": "0.2.1",
+    "babel-preset-es2015": "6.24.1",
+    "babel-preset-node6": "^11.0.0",
+    "babelify": "7.3.0",
+    "browserify": "14.4.0",
     "chai": "^4.0.2",
     "chai-as-promised": "7.0.0",
     "chai-subset": "1.5.0",
@@ -36,20 +43,14 @@
     "googlemaps": "^1.12.0",
     "mathjs": "^3.13.3",
     "md5": "^2.2.1",
+    "mocha": "3.4.2",
     "moment": "^2.18.1",
     "mongoose": "^4.10.5",
+    "nock": "9.0.13",
     "node-telegram-bot-api": "^0.27.1",
     "prettyjson": "^1.2.1",
     "request": "^2.81.0",
     "sewe": "^1.0.0",
-    "babel-eslint": "7.2.3",
-    "babel-istanbul": "0.12.2",
-    "babel-plugin-add-module-exports": "0.2.1",
-    "babel-preset-es2015": "6.24.1",
-    "babelify": "7.3.0",
-    "browserify": "14.4.0",
-    "mocha": "3.4.2",
-    "nock": "9.0.13",
     "standard": "10.0.2",
     "uglify-js": "3.0.15"
   },
