--- a/package.json
+++ b/package.json
@@ -30,7 +30,6 @@
     "babel-preset-es2015": "6.24.1",
     "babel-preset-node6": "^11.0.0",
     "babelify": "7.3.0",
-    "browserify": "14.4.0",
     "chai": "^4.0.2",
     "chai-as-promised": "7.0.0",
     "chai-subset": "1.5.0",
@@ -51,7 +50,6 @@
     "prettyjson": "^1.2.1",
     "request": "^2.81.0",
     "sewe": "^1.0.0",
-    "standard": "10.0.2",
     "uglify-js": "3.0.15"
   },
   "standard": {
@@ -64,6 +62,7 @@
   },
   "devDependencies": {
     "babel-cli": "^6.24.1",
-    "babel-core": "^6.25.0"
+    "babel-core": "^6.25.0",
+    "standard": "^10.0.2"
   }
 }
