--- a/package.json
+++ b/package.json
@@ -24,11 +24,11 @@
   "author": "gkal19",
   "license": "ISC",
   "dependencies": {
-    "babel-eslint": "7.2.3",
     "babel-istanbul": "0.12.2",
     "babel-plugin-add-module-exports": "0.2.1",
     "babel-preset-es2015": "6.24.1",
-    "babel-preset-node6": "^11.0.0",
+    "babel-eslint": "^7.2.3",
+    "eslint": "^4.0.0",
     "babelify": "7.3.0",
     "chai": "^4.0.2",
     "chai-as-promised": "7.0.0",
@@ -64,6 +64,7 @@
     "babel-cli": "^6.24.1",
     "babel-core": "^6.25.0",
     "babel-eslint": "^7.2.3",
+    "eslint": "^4.0.0",
     "standard": "^10.0.2"
   }
 }
